# api/openapi/trainer.yml
@@ -30,15 +30,32 @@ paths:
             type: string
             format: date-time
           required: true
+        - in: query
+          name: pagination
+          schema:
+            type: object
+            properties:
+              page:
+                type: integer
+                format: int32
+              page_size:
+                type: integer
+                format: int32
       responses:
         '200':
           description: todo
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Date'
+                type: object
+                required: [data, paginationMetadata]
+                properties: 
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Date'
+                  paginationMetadata:
+                    $ref: '#/components/schemas/PaginationMetadata'
         default:
           description: unexpected error
           content:
@@ -151,3 +168,16 @@ components:
           type: string
         message:
           type: string
+
+    PaginationMetadata:
+      type: object
+      required: ['currentPage', 'pageSize', 'totalPages', 'totalRecords']
+      properties:
+        currentPage:
+          type: integer
+        pageSize:
+          type: integer
+        totalPages:
+          type: integer
+        totalRecords:
+          type: integer
